# ibb

./: .coveragerc  .editorconfig  .eslintrc.js  .gitignore  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  codecov.yml  ibb.json  install.json  itop.json  package-lock.json  package.json  pyproject.toml  readthedocs.yml  setup.py  tsconfig.eslint.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
css/: ibb.css  unlinkbox.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst  links.rst
examples/: annotations.h5  detections.h5  ibb_brambox_viewer.ipynb  ibb_cutout_viewer.ipynb  ibb_image_canvas.ipynb  ibb_image_controls.ipynb  ibb_image_viewer.ipynb  ibb_index_counter.ipynb  ibb_patch_controls.ipynb  ibb_patch_viewer.ipynb  ibb_repeat_button.ipynb
examples/.ipynb_checkpoints/: ibb_cutout_viewer-checkpoint.ipynb  ibb_image_canvas-checkpoint.ipynb  ibb_patch_viewer-checkpoint.ipynb
ibb/: __init__.py  _bounding_box_viewer.py  _brambox_viewer.py  _cutout_viewer.py  _frontend.py  _image_canvas.py  _image_viewer.py  _main_container.py  _patch_viewer.py  _util.py  _version.py
ibb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ibb/labextension/: build_log.json  package.json
ibb/nbextension/: extension.js  index.js  index.js.map
ibb/static/: extension.js  index.js  index.js.map
ibb/widgets/: __init__.py  _base_viewers.py  _brambox_viewer.py  _cutout_viewer.py  _image_canvas.py  _image_controls.py  _image_viewer.py  _unlink_box.py  (+8 more)
itop/: __init__.py  _brambox_viewer.py  _image_canvas.py  _image_viewer.py  example.py
js/: README.md  package-lock.json  package.json  webpack.config.js
lib/: extension.js  extension.js.map  imagecanvas.d.ts  imagecanvas.js  imagecanvas.js.map  index.d.ts  index.js  index.js.map  maincontainer.d.ts  maincontainer.js  maincontainer.js.map  plugin.d.ts  plugin.js  plugin.js.map  polygons.d.ts  polygons.js  polygons.js.map  serializers.d.ts  serializers.js  serializers.js.map  util.d.ts  util.js  util.js.map  version.js  version.js.map  widget.d.ts  widget.js  widget.js.map
src/: extension.ts  imagecanvas.ts  index.ts  maincontainer.ts  plugin.ts  polygons.ts  repeatbutton.ts  serializers.ts  unlinkbox.ts  version.ts
(+67 files in other folders)
